[package]
name = "rust-yew-catchup"
version = "0.1.0"
authors = ["gamoutatsumi <47162587+gamoutatsumi@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.69"
yew = "0.17.4"
